<resources>
    <string name="app_name">Tingle 4.0</string>
    <string name="headline">Last thing added</string>
    <string name="heading_create">Add</string>
    <string name="what_thing">What thing?</string>
    <string name="where">Where?</string>
    <string name="heading_search">Search</string>
    <string name="f" />
    <string name="search_thing">Search:</string>
    <string name="error_none_found">Not found in the database</string>

</resources>
