<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#000000"
    tools:context="com.itu.jonathan.tingle.TingleActivity">

    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
        <!-- Last thing added -->
        <TextView android:layout_height="53dp" android:layout_width="match_parent" android:text="@string/headline"
            android:padding="5px"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="38dp"
            android:background="#ffffff"
            android:textStyle="bold" />
        <TextView android:layout_height="53dp" android:layout_width="match_parent" android:id="@+id/last_thing"
            android:background="#000000"
            android:textColor="#ffffff" />
        <!-- Button to add new thing-->
        <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/add_button" android:text="@string/heading_create"
            android:contextClickable="false"
            android:background="@drawable/button_border"
            android:textColor="#ffffff" />
        <!-- thin horizontal line -->
        <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/search_go_btn_button" android:text="@string/heading_search"
            android:background="@drawable/button_border"
            android:textColor="#ffffff" />


        <!-- seach for a thing -->


        <!-- What new thing -->
        <LinearLayout  android:layout_height="50dp" android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:layout_height="match_parent" android:layout_width="100dp" android:text="@string/what_thing"
                android:paddingTop="25dp"
                android:textColor="#ffffff"
                android:background="#be000000" />
            <EditText android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/what_text"
                android:background="#be000000"
                android:textColor="#ffffff" />
        </LinearLayout>
        <!-- Where -->
        <LinearLayout android:layout_height="50dp" android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:layout_height="match_parent" android:layout_width="100dp" android:text="@string/where"  android:paddingTop="25dp"
                android:textColor="#ffffff"
                android:textColorHighlight="#000000"
                android:shadowColor="#343434"
                android:background="#be000000" />
            <EditText android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/where_text"
                android:background="#be000000"
                android:textColor="#ffffff" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="See all things"
            android:id="@+id/Listbtn"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_border"
            android:textColor="#ffffff" />


        <Button android:text="Scan QR Code" android:id="@+id/scanner"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ffffff"
            android:background="@drawable/button_border">
        </Button>
        <Button android:text="Scan BAR Code" android:id="@+id/scanner2"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:gravity="center" android:layout_gravity="right"
            android:textColor="#ffffff"
            android:background="@drawable/button_border">
        </Button>
    </LinearLayout>
</RelativeLayout>
